3타입 상단 네비게이션

--- a/FrontEnd/220609 - 3타입 상단 네비게이션/index-2.html
+++ b/FrontEnd/220609 - 3타입 상단 네비게이션/index-2.html
@@ -9,11 +9,15 @@
 </head>
 <body>
     <div class="container">
+        <!-- header 영역 -->
         <header>
+            <!-- 상단 nav bar -->
             <nav>
+                <!-- logo -->
                 <div class="logo">
                     <a href="https://playdata.io/"><img src="/images/logo.png"></a>
                 </div>
+                <!-- gnb -->
                 <div class="gnb">
                     <a href=https://playdata.io/pre-lesson">프리레슨</a>
                     <a href="https://playdata.io/bootcamp-all">부트캠프</a>
@@ -21,6 +25,7 @@
                     <a href="https://playdata.io/seminar">세미나</a>
                     <a href="https://playdata.io/careerprogram">취업지원</a>
                 </div>
+                <!-- lnb -->
                 <div class="lnb">
                     <a href="#none">로그인</a>
                 </div>
