--- a/FrontEnd/220630 - Netflix Clone/index.html
+++ b/FrontEnd/220630 - Netflix Clone/index.html
@@ -29,10 +29,71 @@
                 </div>
             </div>
         </section>
-        <section class="enjoy"></section>
-        <section class="download"></section>
-        <section class="watch"></section>
-        <section class="create"></section>
+        <section class="enjoy">
+            <div class="inner">
+                <div class="desc">
+                    <h2>Enjoy on your TV.
+                    </h2>
+                    <p>
+                        Watch on Smart TVs, Playstation, Xbox, Chromecast, Apple TV, Blu-ray players, and more.
+                    </p>
+                </div>
+                <div class="preview">
+                    <div class="preview-inner">
+                        <img src="/images/tv.png">
+                        <video class="innervideo" src="/videos/video-tv-0819.m4v" mute autoplay loop></video>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="download">
+            <div class="inner">
+                <div class="preview">
+                    <img src="/images/mobile-0819.jpg">
+                    <div class="downloading">
+                        <img class="poster" src="/images/boxshot.png">
+                        <div class="text">
+                            <span>Stranger Things</span>
+                            <p>Downloading...</p>
+                        </div>
+                        <img class="download-gif" src="/images/download-icon.gif">
+                    </div>
+                </div>
+                <div class="desc">
+                    <h2>Download your shows to watch offline.</h2>
+                    <p>
+                        Save your favorites easily and always have something to watch.
+                    </p>
+                </div>
+            </div>
+        </section>
+        <section class="watch">
+            <div class="inner">
+                <div class="desc">
+                    <h2>Watch everywhere.</h2>
+                    <p>
+                        Stream unlimited movies and TV shows on your phone, tablet, laptop, and TV without paying more.
+                    </p>
+                </div>
+                <div class="preview">
+                    <img src="/images/device-pile.png">
+                    <video class="innervideo2" src="/videos/video-devices.m4v" mute autoplay loop></video>
+                </div>
+            </div>
+        </section>
+        <section class="create">
+            <div class="inner">
+                <div class="preview">
+                    <img src="/images/AAAABfpnX3dbgjZ-Je8Ax3xn0kXehZm_5L6-xe6YSTq_ucht9TI5jwDMqusWZKNYT8DfGudD0_wWVVTFLiN2_kaQJumz2iivUWbIbAtF.png">
+                </div>
+                <div class="desc">
+                    <h2>Create profiles for kids.</h2>
+                    <p>
+                        Send kids on adventures with their favorite characters in a space made just for them—free with your membership.
+                    </p>
+                </div>
+            </div>
+        </section>
         <section class="faq"></section>
         <footer></footer>
     </div>
