--- a/FrontEnd/220630 - Netflix Clone/index.html
+++ b/FrontEnd/220630 - Netflix Clone/index.html
@@ -41,7 +41,7 @@
                 <div class="preview">
                     <div class="preview-inner">
                         <img src="/images/tv.png">
-                        <video class="innervideo" src="/videos/video-tv-0819.m4v" mute autoplay loop></video>
+                        <video class="innervideo" src="/videos/video-tv-0819.m4v" autoplay loop muted></video>
                     </div>
                 </div>
             </div>
@@ -51,12 +51,16 @@
                 <div class="preview">
                     <img src="/images/mobile-0819.jpg">
                     <div class="downloading">
-                        <img class="poster" src="/images/boxshot.png">
+                        <div class="img-box">
+                            <img class="poster" src="/images/boxshot.png">
+                        </div>
                         <div class="text">
-                            <span>Stranger Things</span>
+                            <h5>Stranger Things</h5>
                             <p>Downloading...</p>
                         </div>
-                        <img class="download-gif" src="/images/download-icon.gif">
+                        <div class="gif-box">
+                            <img class="download-gif" src="/images/download-icon.gif">
+                        </div>
                     </div>
                 </div>
                 <div class="desc">
@@ -77,7 +81,7 @@
                 </div>
                 <div class="preview">
                     <img src="/images/device-pile.png">
-                    <video class="innervideo2" src="/videos/video-devices.m4v" mute autoplay loop></video>
+                    <video class="innervideo2" src="/videos/video-devices.m4v" autoplay loop muted></video>
                 </div>
             </div>
         </section>
