--- a/FrontEnd/220630 - Netflix Clone/index.html
+++ b/FrontEnd/220630 - Netflix Clone/index.html
@@ -98,8 +98,103 @@
                 </div>
             </div>
         </section>
-        <section class="faq"></section>
-        <footer></footer>
+        <section class="faq">
+            <div class="faq-inner">
+                <h1>Frequently Asked Questions</h1>
+                <article class="accordion">
+                    <input type="radio" name="faq-item" id="faq1">
+                    <label for="faq1">What is Netflix?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        Netflix is a streaming service that offers a wide variety of award-winning TV shows, movies, anime, documentaries, and more on thousands of internet-connected devices.
+                        <br><br>
+                        You can watch as much as you want, whenever you want without a single commercial – all for one low monthly price. There's always something new to discover and new TV shows and movies are added every week!
+                    </div>
+                    <input type="radio" name="faq-item" id="faq2">
+                    <label for="faq2">How much does Netflix cost?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all for one fixed monthly fee. Plans range from KRW9,500 to KRW14,500 a month. No extra costs, no contracts.
+                    </div>
+                    <input type="radio" name="faq-item" id="faq3">
+                    <label for="faq3">Where can I watch?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix account to watch instantly on the web at netflix.com from your personal computer or on any internet-connected device that offers the Netflix app, including smart TVs, smartphones, tablets, streaming media players and game consoles.
+                        <br><br>
+                        You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use downloads to watch while you're on the go and without an internet connection. Take Netflix with you anywhere.
+                    </div>
+                    <input type="radio" name="faq-item" id="faq4">
+                    <label for="faq4">How do I cancel?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        Netflix is flexible. There are no pesky contracts and no commitments. You can easily cancel your account online in two clicks. There are no cancellation fees – start or stop your account anytime.
+                        <br><br>
+                        Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                    </div>
+                    <input type="radio" name="faq-item" id="faq5">
+                    <label for="faq5">What can I watch on Netflix?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        Netflix has an extensive library of feature films, documentaries, TV shows, anime, award-winning Netflix originals, and more. Watch as much as you want, anytime you want.
+                    </div>
+                    <input type="radio" name="faq-item" id="faq6">
+                    <label for="faq6">Is Netflix good for kids?<span><i class="xi-plus-thin"></i></span></label>
+                    <div class="faq-content">
+                        The Netflix Kids experience is included in your membership to give parents control while kids enjoy family-friendly TV shows and movies in their own space.
+                        <br><br>
+                        Kids profiles come with PIN-protected parental controls that let you restrict the maturity rating of content kids can watch and block specific faq-titles you don’t want kids to see.
+                    </div>
+                </article>
+                <aside>
+                    <p>
+                        Ready to watch? Enter your email to create or restart your membership.
+                    </p>
+                    <div class="getstarted">
+                        <input type="email"><span>Email Address</span><button>Get Started <i class="xi-angle-right-min"></i></button>
+                    </div>
+                </aside>
+            </div>
+        </section>
+        <footer>
+            <div class="footer-inner">
+              <div class="sitemap">
+                <h6>Questions? Call 00-308-321-0161</h6>
+                <div class="links">
+                  <div class="items">
+                    <a href="#none">FAQ</a>
+                    <a href="#none">Investor Relation</a>
+                    <a href="#none">Privacy</a>
+                    <a href="#none">Speed Test</a>
+                  </div>
+                  <div class="items">
+                    <a href="#none">Help Center</a>
+                    <a href="#none">Jobs</a>
+                    <a href="#none">Cookie Preferences</a>
+                    <a href="#none">Legal Notices</a>
+                  </div>
+                  <div class="items">
+                    <a href="#none">Account</a>
+                    <a href="#none">Ways to Watch</a>
+                    <a href="#none">Corporate Information</a>
+                    <a href="#none">Netflix Originals</a>
+                  </div>
+                  <div class="items">
+                    <a href="#none">Media Center</a>
+                    <a href="#none">Terms of Use</a>
+                    <a href="#none">Contact Us</a>
+                  </div>
+                </div>
+              </div>
+              <div class="copyright">
+                <p>
+                  Netflix South Korea<br><br>
+                  Netflix Services Korea Ltd. E-Commerce Registration Number: Je 2018-Seoul Jong-ro-0426 Ho. Phone: 00-308-321-0161<br>
+                  Representative: Reginald Shawn Thompson<br>
+                  Email: korea@netflix.com<br>
+                  Address: 20F, Tower A, Centropolis Building 26, Ujeongguk-ro, Jongno-gu, Seoul, 03161 Republic of Korea<br>
+                  Business registration number: 165-87-00119<br>
+                  Hosted by: Amazon Web Services Inc.<br>
+                  KFTC website
+                </p>
+              </div>
+            </div>
+          </footer>
     </div>
 </body>
 </html>
